--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3205,7 +3205,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #71b93e;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3213,7 +3213,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="email"]:focus,
 			.wrapper.style2 select:focus,
 			.wrapper.style2 textarea:focus {
-				border-color: rgba(60, 58, 58, 0.5);
+				border-color: rgba(54, 185, 96, 0.5);
 			}
 
 			.wrapper.style2 input[type="submit"]:hover, .wrapper.style2 input[type="submit"]:active,
@@ -3225,7 +3225,7 @@ input, select, textarea {
 			.wrapper.style2 .button:active {
 				background-color: rgba(255, 255, 255, 0.075) !important;
 				box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
-				color: #ffffff !important;
+				color: #be6868 !important;
 			}
 
 			.wrapper.style2 input[type="submit"]:active,
@@ -3239,7 +3239,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="reset"].primary,
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
-				background-color: #ffffff;
+				background-color: #262020;
 				color: #e44c65 !important;
 			}
 
@@ -4138,7 +4138,7 @@ input, select, textarea {
 	}
 
 	.headerh2Blackgb{
-		color: white;
+		color: rgb(205, 40, 40);
 	}
 	.app-list{
 		text-align: center;
