--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2781,7 +2781,7 @@ input, select, textarea {
 		}
 
 		table th {
-			color: #ffffff;
+			color: #c59595;
 			font-size: 0.9em;
 			font-weight: 300;
 			padding: 0 0.75em 0.75em 0.75em;
@@ -3311,7 +3311,7 @@ input, select, textarea {
 		}
 
 		.wrapper.fade.inactive > .container {
-			opacity: 0;
+			opacity: -300px;
 		}
 
 /* Dropotron */
@@ -3378,13 +3378,14 @@ input, select, textarea {
 	}
 
 	#header {
-		background: rgba(39, 40, 51, 0.965);
+		background: rgba(21, 21, 22, 0.965);
 		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
 		cursor: default;
 		height: 3.5em;
 		left: 0;
 		line-height: 3.5em;
 		position: fixed;
+
 		top: 0;
 		width: 100%;
 		z-index: 100;
@@ -3396,12 +3397,14 @@ input, select, textarea {
 			line-height: inherit;
 			margin: 0;
 			position: absolute;
+			text-decoration: none;
 			top: 0;
 		}
 
 		#header nav {
 			position: absolute;
 			right: 1em;
+			text-decoration: none;
 			top: 0;
 		}
 
@@ -3420,6 +3423,7 @@ input, select, textarea {
 						display: inline-block;
 						height: inherit;
 						line-height: inherit;
+						text-decoration: none;
 						outline: 0;
 					}
 
@@ -3434,7 +3438,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #7a7777;
 					}
 
 					#header nav ul li > ul {
@@ -3446,7 +3450,7 @@ input, select, textarea {
 	}
 
 	body.landing #header {
-		background: transparent;
+		/* background: transparent; */
 		box-shadow: none;
 		position: absolute;
 	}
@@ -3455,7 +3459,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #272833;
+		background-color: #e9e9f1;
 		background-image: url("../../images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
@@ -3476,7 +3480,7 @@ input, select, textarea {
 
 		#banner:after {
 			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgb(226, 226, 231), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			content: '';
@@ -4134,13 +4138,39 @@ input, select, textarea {
 	}
 
 	.headerh2{
-		color: black;
+		color: rgba(223, 222, 225, 0.479);
 	}
 
 	.headerh2Blackgb{
-		color: rgb(205, 40, 40);
+		color: rgb(226, 219, 219);
 	}
 	.app-list{
 		text-align: center;
 		margin-left: 20px;
+	}
+
+	.about-center{
+		text-align: center;
+	}
+
+	.front-end1{
+		border: 2px solid rgb(228, 232, 239);
+		flex-direction: left;
+		width: 200px;
+		margin-right: 30px;
+		border-radius: 20px;
+	}
+
+	.front-end2{
+		border: 2px solid rgb(233, 235, 241);
+		flex-direction: right;
+		width: 200px;
+		margin-right: 30px;
+		border-radius: 20px;
+	}
+
+
+	.front-container{
+		display: flex;
+		justify-content: center;
 	}
