--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #0f0e0e;
 		font-weight: 300;
 		line-height: 1em;
 		margin: 0 0 1em 0;
@@ -149,9 +149,11 @@ input, select, textarea {
 		font-size: 2em;
 		line-height: 1.5em;
 		letter-spacing: -0.025em;
+		text-align: center;
 	}
 
 	h3 {
+		text-align: center;
 		font-size: 1.35em;
 		line-height: 1.5em;
 	}
@@ -695,7 +697,7 @@ input, select, textarea {
 		.row.gtr-uniform > * > :last-child {
 			margin-bottom: 0;
 			display: flex;
-			justify-content:space-between;
+			justify-content:center;
 		}
 
 		.row.aln-left {
@@ -2157,7 +2159,7 @@ input, select, textarea {
 	}
 
 	header p {
-		color: #ffffff;
+		color: #0e0e0e;
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
@@ -3061,7 +3063,7 @@ input, select, textarea {
 		}
 
 		.spotlight:before {
-			background-image: url("images/overlay.png");
+			/* background-image: url("images/overlay.png"); */
 			content: '';
 			display: block;
 			height: 100%;
@@ -3087,10 +3089,11 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
 			-ms-transition: -ms-transform 1s ease, opacity 1s ease;
 			transition: transform 1s ease, opacity 1s ease;
-			background: rgba(23, 24, 32, 0.95);
+			background: rgba(239, 240, 247, 0.95);
 			border-style: solid;
 			opacity: 1;
 			position: absolute;
+			color: #181920;
 		}
 
 		.spotlight .goto-next {
@@ -3205,7 +3208,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #71b93e;
+			background: #e6e8ebab;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3459,7 +3462,7 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #e9e9f1;
+		background-color: #f3f3f7;
 		background-image: url("../../images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
@@ -3682,7 +3685,7 @@ input, select, textarea {
 				}
 
 				.spotlight .content {
-					background-color: #1c1d26;
+					background-color: #ebecf2;
 					border-width: 0 !important;
 					border-top-width: 0.35em !important;
 					bottom: auto !important;
@@ -4130,20 +4133,29 @@ input, select, textarea {
 		display: flex;
 	}
 
-	.columns{
+	.column1{
 		flex-direction: row;
 		flex-wrap: wrap;
-		justify-content: space-around;
+		justify-content: space-between;
 
 	}
-
+	.column2{
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
 	.headerh2{
-		color: rgba(223, 222, 225, 0.479);
+		color: rgba(5, 1, 14, 0.479);
 	}
 
 	.headerh2Blackgb{
-		color: rgb(226, 219, 219);
+		color:#0e0e0e;
 	}
+
+	.headerh2-nav{
+		color: rgb(242, 237, 237);
+	}
+
 	.app-list{
 		text-align: center;
 		margin-left: 20px;
@@ -4154,23 +4166,57 @@ input, select, textarea {
 	}
 
 	.front-end1{
-		border: 2px solid rgb(228, 232, 239);
+		border: 3px solid grey;
 		flex-direction: left;
 		width: 200px;
 		margin-right: 30px;
 		border-radius: 20px;
 	}
 
+	.front-end1:hover{
+		transform: scale(1.09);
+	}
+
+	.btn-secondary:hover{
+		background-color: #959de0;
+
+	}
 	.front-end2{
-		border: 2px solid rgb(233, 235, 241);
+		border: 3px solid grey;
 		flex-direction: right;
 		width: 200px;
 		margin-right: 30px;
 		border-radius: 20px;
 	}
 
+	.front-end2:hover{
+		transform: scale(1.09);
+	}
 
 	.front-container{
 		display: flex;
-		justify-content: center;
+		justify-content: space-evenly;
+	}
+
+	.title{
+		font-size: 20px;
+		color: black;
+		margin-top: 5px;
+		text-align: center;
+	}
+
+	.title-p{
+		margin-left: -50px;
+		font-size: 20px;
+	}
+
+	.experience-p{
+		color: black;
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+
+	
+	.fa-check-square{
+		color:lightcoral;
 	}
