--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4132,7 +4132,7 @@ input, select, textarea {
 		display: flex;
 	}
 
-	.column1{
+	.columns{
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -4198,14 +4198,14 @@ input, select, textarea {
 	}
 
 	.title{
-		font-size: 20px;
+		/* font-size: 20px; */
 		color: black;
 		margin-top: 5px;
 		text-align: center;
 	}
 
 	.title-p{
-		margin-left: -50px;
+		margin-left:-15px;
 		font-size: 20px;
 	}
 
