--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4210,8 +4210,9 @@ input, select, textarea {
 	}
 
 	.title-p{
-		margin-left:-15px;
+		margin-left:20px;
 		font-size: 20px;
+		width: 310px;
 	}
 
 	.experience-p{
